clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__complex__parse_mixed_sequences.snap
---
source: clash-brush-parser/src/parser/tests/complex.rs
assertion_line: 206
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cmd1; cmd2 && cmd3 || cmd4; cmd5",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cmd1",
                  loc: "[location]",
                )),
              )),
            ],
          ),
        ), Sequence),
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cmd2",
                  loc: "[location]",
                )),
              )),
            ],
          ),
          additional: [
            And(Pipeline(
              seq: [
                Simple(SimpleCommand(
                  word_or_name: Some(Word(
                    value: "cmd3",
                    loc: "[location]",
                  )),
                )),
              ],
            )),
            Or(Pipeline(
              seq: [
                Simple(SimpleCommand(
                  word_or_name: Some(Word(
                    value: "cmd4",
                    loc: "[location]",
                  )),
                )),
              ],
            )),
          ],
        ), Sequence),
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cmd5",
                  loc: "[location]",
                )),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
