clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__complex__parse_pipeline_with_redirections.snap
---
source: clash-brush-parser/src/parser/tests/complex.rs
assertion_line: 90
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cat < input.txt | grep pattern | tee output.txt > /dev/null 2>&1",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cat",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(File(None, Read, Filename(Word(
                    value: "input.txt",
                    loc: "[location]",
                  )))),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "grep",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "pattern",
                    loc: "[location]",
                  )),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "tee",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "output.txt",
                    loc: "[location]",
                  )),
                  IoRedirect(File(None, Write, Filename(Word(
                    value: "/dev/null",
                    loc: "[location]",
                  )))),
                  IoRedirect(File(Some(2), DuplicateOutput, Duplicate(Word(
                    value: "1",
                    loc: "[location]",
                  )))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
